<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Contact</string>
    <string name="contact_friend_inculd_message">Encrypted Message</string>
    <string name="contact_friend_inculd_call">Encrypted Call</string>
    <string name="contact_friend_inculd_encription_serve">Quickly turn on third-party encryption services</string>
    <string name="contact_friend_top_item_text">Group Contacts information</string>
    <string name="contact_address_btn_text">Enter</string>
    <string name="login_account_lable">Actoma+ account</string>
    <string name="action_more">More</string>
    <string name="action_search">Search</string>
    <string name="search_more">Search More</string>
    <string name="search_more_tips">The current version only support Actoma+ contacts and group search</string>
    <string name="contact_delete">Delete</string>
    <string name="set_remark">Remark</string>
    <string name="add_friend">Add Friends</string>
    <string name="loading">Loading&#8230;</string>
    <string name="choose_friend">Friends</string>
    <string name="company_contact">Group Contacts</string>
    <string name="group_name">Group Name</string>
    <string name="group_avatar">Group Head Portrait</string>
    <string name="my_nickname_in_group">My Group Nickname</string>
    <string name="no_name">unnamed</string>
    <string name="group_name_setting">Set Group Name</string>
    <string name="my_nickname_setting">Set your Group Nickname</string>
    <string name="nickname_description">Nickname only show in this group</string>
    <string name="no_group">Click up right corner “+” to create a group chat</string>
    <string name="creating_group">Starting group chat&#8230;</string>
    <string name="creating_group_failed">Start a group chat fail</string>
    <string name="exceed_max_member_count">The maximum number of group members is %d</string>
    <string name="adding_group_member">Adding group members&#8230;</string>
    <string name="adding_group_member_failed">Add group members failed</string>
    <string name="deleting_group_member">Removing group member&#8230;</string>
    <string name="deleting_group_failed">Remove group member failed</string>
    <string name="select_contacts_title">Select Contacts</string>
    <string name="groupname_cannot_empty">Group name empty</string>
    <string name="unsupport_emoji">Emotion input isn\'t support</string>
    <string name="push_error_group">Incremental update group information error，error reason%1$s,error code:%2$s</string>
    <string name="request_friend">%1$sRequest to add you as a friend</string>
    <string name="increment_error_request_friend">Incremental friends request error，error reason%1$s,error code:%2$s</string>
    <string name="increment_error_account">Incremental accounts information error，error reason%1$s,error code:%2$s</string>
    <string name="increment_error_friend">Incremental friends error，error reason%1$s,error code:%2$s</string>
    <string name="increment_error_depart">Incremental department error，error reason%1$s,error code:%2$s</string>
    <string name="select_member_title">Selected contact(%1$s)numbers</string>
    <string name="default_select_member_title">Select contact please</string>
    <string name="save_remark_tips">Saving&#8230;</string>
    <string name="request_info_tips">Sending request information&#8230;</string>
    <string name="remark_title">Remark Information</string>
    <string name="default_request_info">I\'m%1$s</string>
    <string name="detail_info_title">Detail Information</string>
    <string name="delete_friend_error">Delete Failed</string>
    <string name="check_net_work_state">Network unavailable, check network setting please</string>
    <string name="friend_history_title">New Friend</string>
    <string name="friend_set_remark">Remark Information</string>
    <string name="selected_open_transfer_top">%1$s Secure&#8230;</string>
    <string name="actom_account">Account/Phone Number</string>
    <string name="delete_friend_tips">Deleting friend&#8230;</string>
    <string name="account">Account: </string>
    <string name="nickname">Nickname: </string>
    <string name="contact_detail_name">Name: </string>
    <string name="my_account">My Account:</string>
    <string name="delete_confirm_title">Delete the Contacts?</string>
    <string name="content_dialog_message">After deletion, you will disappear from the other party\'s contact list，        \r\n and delete the chat with the contact, call records as well.</string>
    <string name="content_yes">OK</string>
    <string name="content_no">Cancel</string>
    <string name="request_info_title">Apply for authentication</string>
    <string name="not_related">The other is not your friend already, add first</string>
    <string name="request_info_error">Sending request failed, try again</string>
    <string name="search_tips">Searching&#8230;</string>
    <string name="antong_tag">[Not an Actoma+ User]</string>
    <string name="an_tong_open_tip">Click to Quit</string>
    <string name="un_support_search_selft">Search Self is Unsupported</string>
    <string name="new_friend_request_title">New friend authentication request</string>
    <string name="new_friend_request_content">A new friend authentication request</string>
    <string name="get_contact_info_error">Get contact information failed</string>
    <string name="already_is_friend">The other is your friend already</string>
    <string name="invalid_account">Invalid Account</string>
    <string name="input_actom_account_or_phone">Input account or phone number</string>
    <string name="version_too_low">Version too low. Please check and update version</string>
    <string name="server_is_busy">Server busy, try again</string>
    <string name="user_is_not_friend">The user isn\'t your friend already, can not remark</string>
    <string name="set_remark_fail">Remark Failed</string>
    <string name="accept_friend_error">Accept add friends failed</string>
    <string name="friend_request_invalided">The add friends request invalid</string>
    <string name="group_max_member" tools:ignore="PluralsCandidate">maximum members in a group is %d persons</string>
    <string name="contact_fragment_red_tishi">Click the shield on the right side of contact</string>
    <string name="params_err">Parameter illegal</string>
    <string name="upload_group_avatar_error">The group head portrait upload failed</string>
    <string name="uploading_group_avatar">Uploading the group head portrait&#8230;</string>
    <string name="updating_group_name">Updating group name</string>
    <string name="update_group_name_error">Update group name failed</string>
    <string name="updating_nickname">Updating group nick name</string>
    <string name="update_nickname_error">Update group nick name failed</string>
    <string name="update_group_name_contact_emoji">Group name is not support emotion</string>
    <string name="updating_nickname_fail">Group nick name is not support emotion</string>
    <string name="group_chat_number_title">Group Chat Information（%d）</string>
    <string name="no_sec_entities_not_into_group">The other using a too low version, can not create group chat</string>
    <string name="no_sec_entities_not_add_into_group">The selected user using a too low version, can not join in group chat</string>
    <string name="contact_net_error">Network exception, try again later</string>
    <string name="actoma_team_title">Actoma+ Team</string>
    <string name="contact_new_friend">New Friend</string>
    <string name="contact_friend_state_wait">Waiting for authentication</string>
    <string name="contact_friend_state_wait_for_others">Waiting for the other authentication</string>
    <string name="contact_friend_state_add">Added</string>
    <string name="contact_friend_state_accepte">Add</string>
    <string name="contact_service_not_authorized">Ticket authentication failed</string>
    <string name="contact_service_request_params_not_valid">Request parameter illegal</string>
    <string name="contact_service_request_params_error">Request parameter format error</string>
    <string name="contact_service_internal_server_error">Server internal exception</string>
    <string name="contact_service_exception_handle_error">Exception handle error</string>
    <string name="contact_service_friend_account_not_exists">The contact account invalid</string>
    <string name="contact_service_already_friend">The other is your friend already</string>
    <string name="contact_service_no_users_found">The user not found</string>
    <string name="contact_service_not_friend">The user isn\'t your friend already</string>
    <string name="contact_service_no_friend_req">The friend request invalid</string>
    <string name="contact_no_account">The account was found</string>
    <string name="contact_account_excepte">Account information exceptiond</string>
    <string name="contact_attaching_account_info">Getting contact information&#8230;</string>
    <string name="contact_safe_communication">Secure&#8230;</string>
    <string name="contact_search_friend_title">Friend,group contacts</string>
    <string name="contact_search_group_title">Group</string>
    <string name="contact_search_more_friend_title">More friends,more group contacts</string>
    <string name="contact_search_more_group_title">More groups</string>
    <string name="contact_search_account">Account:</string>
    <string name="contact_search_phone">Phone:</string>
    <string name="contact_fragment_friend_title">Friends</string>
    <string name="contact_fragment_group_title">Groups</string>
    <string name="contact_fragment_company_title">Group Contacts</string>
    <string name="contact_accepting_friend_request">Accepting friends request&#8230;</string>
    <string name="contact_detail_common_info">Detail Information</string>
    <string name="contact_opening_safe_dialog">Opening&#8230;</string>
    <string name="contact_closing_safe_dialog">Closing&#8230;</string>
    <string name="contact_accept_request">Accepting&#8230;</string>
    <string name="contact_ok">OK</string>
    <string name="contact_cancel">Cancel</string>
    <string name="contact_friend_request_check_info">Friend\'s authentication request information:</string>
    <string name="contact_name">Name</string>
    <string name="contact_customer_phone">Telephone: </string>
    <string name="contact_layout_name">Name</string>
    <string name="contact_layout_remark">Remark</string>
    <string name="contact_layout_nickname">Nickname</string>
    <string name="contact_layout_partment">Branch</string>
    <string name="contact_layout_phone">Phone</string>
    <string name="contact_no_check_layout">The layout of didn\'t choose</string>
    <string name="contact_safe_communicate_state_close">Didn\'t open security communication</string>
    <string name="contact_use_wecharorqq_chat_with_friend">Open security communication by Wechat,QQ,dingding and friends</string>
    <string name="contact_and">With</string>
    <string name="contact_safe_communicate_by_wechat">Wechat communicating safely</string>
    <string name="contact_checkinfo_text">Authentication information input box</string>
    <string name="contact_remark_for_friend">Make an easy memory name for friends</string>
    <string name="contact_layout_send_text">Send</string>
    <string name="contact_layout_check_info_wait_accepte">Input authentication request, and wait for accept</string>
    <string name="contact_layout_check_request_info">Apply for authentication message</string>
    <string name="contact_search_nothing">The contact not found</string>
    <string name="contact_no_group_text">No group</string>
    <string name="contact_search_account_or_phone">Search account or Tel NO</string>
    <string name="contact_session_list">Search account or phone number</string>
    <string name="show_all_group_members">All Group  Members</string>
</resources>