<menu xmlns:tools="http://schemas.android.com/tools"    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto">    <item        android:id="@+id/action_more"        android:icon="@drawable/abs_ic_more"        android:title="@string/action_more"        app:showAsAction="always"        tools:ignore="AlwaysShowAction">        <menu>            <item                android:id="@+id/action_add"                android:icon="@drawable/ic_title_adduser"                android:title="@string/add_friend"                app:showAsAction="always"                tools:ignore="AlwaysShowAction" />            <item                android:id="@+id/action_remark"                android:icon="@drawable/ic_title_remark"                android:title="@string/set_remark"                app:showAsAction="always"                tools:ignore="AlwaysShowAction" />            <item                android:id="@+id/action_del"                android:icon="@drawable/ic_title_delete"                android:title="@string/contact_delete"                app:showAsAction="always"                tools:ignore="AlwaysShowAction" />        </menu>    </item></menu>