<?xml version="1.0" encoding="utf-8"?><RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    >    <include        android:id="@+id/toolbar"        layout="@layout/view_toolbar" />    <Button        android:id="@+id/send_remark"        android:layout_width="46dp"        android:layout_height="28dp"        android:textSize="14sp"        android:text="@string/contact_ok"        android:textAllCaps="false"        android:textColor="@color/base_title_gold"        android:layout_marginTop="@dimen/base_14"        android:background="@drawable/bg_common_toolbar_btn_seletor"        android:layout_alignRight="@id/toolbar"        android:layout_marginRight="16dp"        android:paddingLeft="8dp"        android:paddingRight="8dp"/>    <LinearLayout        android:layout_below="@id/toolbar"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical"        android:layout_marginTop="30dp"        android:layout_marginLeft="16dp"        android:layout_marginRight="16dp">        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:contentDescription="@string/contact_layout_remark"            android:text="@string/contact_layout_remark"            android:textColor="#8a000000"            android:textSize="14sp" />        <com.xdja.contact.view.MyEditText            android:id="@+id/remark_input"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_gravity="center_horizontal"            android:contentDescription="@string/contact_checkinfo_text"            android:maxLength="16"            android:singleLine="true"            android:textColor="@color/slide_tab_color_selected"            android:background="@drawable/bg_edittext"            android:textSize="16sp"            android:layout_marginTop="20dp"/>        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:text="@string/contact_remark_for_friend"            android:textSize="14sp"            android:textColor="#8a000000"            android:layout_marginTop="10dp"/>    </LinearLayout></RelativeLayout>