<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="match_parent"    android:layout_height="match_parent"    >    <include        android:id="@+id/toolbar"        layout="@layout/view_toolbar" />    <Button        android:id="@+id/request_info_send_btn"        android:layout_width="46dp"        android:layout_height="28dp"        android:layout_alignRight="@id/toolbar"        android:layout_marginRight="12dp"        android:layout_marginTop="@dimen/base_14"        android:background="@drawable/bg_common_toolbar_btn_seletor"        android:text="@string/contact_layout_send_text"        android:textAllCaps="false"        android:textSize="14sp"        android:textColor="@color/base_title_gold" />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@id/toolbar"        android:layout_marginLeft="16dp"        android:layout_marginRight="16dp"        android:layout_marginTop="30dp"        android:orientation="vertical">        <TextView            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:contentDescription="@string/contact_layout_remark"            android:text="@string/contact_layout_check_info_wait_accepte"            android:textColor="#8a000000"            android:textSize="14sp" />        <RelativeLayout            android:layout_width="wrap_content"            android:layout_marginTop="20dp"            android:layout_height="wrap_content">            <com.xdja.contact.view.MyEditText                android:id="@+id/edit_request_info"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_gravity="center_horizontal"                android:contentDescription="@string/contact_checkinfo_text"                android:maxLength="50"                android:singleLine="true"                android:textColor="@color/slide_tab_color_selected"                android:background="@drawable/bg_edittext"                android:textSize="16sp"/>            <!--<com.xdja.contact.view.MyEditText                android:id="@+id/edit_request_info"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_gravity="center_horizontal"                android:contentDescription="验证信息输入框"                android:maxLength="50"                android:textColor="@color/base_black_95"                android:singleLine="true"                android:textSize="16sp" />-->            <!--<ImageButton                android:id="@+id/clear_btn"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:background="@null"                android:layout_centerVertical="true"                android:layout_alignParentRight="true"                android:src="@drawable/ic_searchbar_clear"/>-->        </RelativeLayout>    </LinearLayout></RelativeLayout>