<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    tools:ignore="Overdraw"    android:layout_width="match_parent"    android:layout_height="match_parent"    >    <!--overdraw-->    <!--android:background="@color/base_white_95"-->    <FrameLayout        android:id="@+id/not_choose_layout"        android:layout_width="match_parent"        android:layout_height="56dp"        android:layout_alignParentTop="true"        android:background="#eee6d3"        android:contentDescription="@string/contact_no_check_layout">        <LinearLayout            android:id="@+id/red_tishi_lyout"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:orientation="vertical"            android:visibility="gone">            <TextView                android:id="@+id/red_tishi"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_gravity="center_horizontal"                android:text="@string/contact_fragment_red_tishi"                android:textColor="@color/base_red"                android:textSize="14sp"                android:visibility="visible" />            <TextView                android:id="@+id/selected_friend_name"                android:layout_width="match_parent"                android:layout_height="match_parent"                android:contentDescription="@string/contact_safe_communicate_state_close"                android:gravity="center"                android:text="@string/contact_use_wecharorqq_chat_with_friend"                android:textColor="#F3000000"                android:textSize="14sp"                android:visibility="visible" />        </LinearLayout>        <RelativeLayout            android:id="@+id/friend_open_transfer_layout"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:background="@drawable/tab_press_bg_selector"            android:visibility="visible">            <com.xdja.comm.circleimageview.CircleImageView                android:id="@+id/friend_open_transfer_head_icon"                android:layout_width="42dp"                android:layout_height="42dp"                android:layout_alignParentLeft="true"                android:layout_centerVertical="true"                android:layout_marginLeft="12dp"                android:background="@drawable/img_avater_40"                />            <ImageView                android:id="@+id/close_selected_open_transafer"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_alignParentRight="true"                android:layout_centerVertical="true"                android:layout_marginRight="20dp"                android:src="@drawable/close_transfer_icon"                android:visibility="gone"                android:contentDescription="@null"/>                <RelativeLayout android:id="@+id/show_name_layout"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:gravity="center_horizontal"                    android:layout_marginTop="10dp"                    android:layout_marginLeft="12dp"                    android:layout_marginRight="12dp"                    android:orientation="vertical">                    <RelativeLayout                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_toLeftOf="@+id/show_name_layout_name2">                        <TextView                            android:id="@+id/show_name_layout_name0"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:ellipsize="end"                            android:singleLine="true"                            android:text="@string/contact_and"                            android:textColor="#F3000000"                            android:textSize="14sp" />                        <TextView                            android:id="@+id/show_name_layout_name1"                            android:layout_width="wrap_content"                            android:layout_height="wrap_content"                            android:layout_toRightOf="@+id/show_name_layout_name0"                            android:ellipsize="end"                            android:singleLine="true"                            android:maxEms="6"                            android:textColor="@color/selected_name_color"                            android:textSize="14sp" />                    </RelativeLayout>                    <TextView                        android:id="@+id/show_name_layout_name2"                        android:layout_width="wrap_content"                        android:layout_height="wrap_content"                        android:layout_alignParentRight="true"                        android:ellipsize="end"                        android:singleLine="true"                        android:text="@string/contact_safe_communicate_by_wechat"                        android:textColor="#F3000000"                        android:textSize="14sp" />                </RelativeLayout>            <TextView                android:layout_width="match_parent"                android:layout_height="match_parent"                android:layout_below="@+id/show_name_layout"                android:gravity="center_horizontal"                android:layout_marginTop="3dp"                android:text="@string/an_tong_open_tip"                android:textColor="#F3000000"                android:textSize="16sp" />        </RelativeLayout>    </FrameLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@id/not_choose_layout"        android:orientation="vertical">        <com.xdja.contact.view.SlidingTabLayout            android:id="@+id/contact_slidingTab"            android:layout_width="match_parent"            android:layout_height="48dp"            android:background="@color/base_gray_f7" />        <View            android:layout_width="match_parent"            android:layout_height="1dp"            android:layout_marginTop="-1dp"            android:background="@drawable/shape_line" />        <com.xdja.contact.view.NoScrollViewPager            android:id="@+id/contact_viewpager"            android:layout_width="match_parent"            android:layout_height="match_parent"/>    </LinearLayout></RelativeLayout>