<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    tools:ignore="Overdraw"    android:layout_width="match_parent"    android:layout_height="wrap_content"    android:orientation="vertical"    android:descendantFocusability="blocksDescendants">    <com.xdja.contact.view.GridViewForScroll        android:id="@+id/editor_gv"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:numColumns="4"        android:paddingTop="10dp"        android:paddingBottom="10dp"        android:paddingLeft="11dp"        android:paddingRight="11dp"        android:horizontalSpacing="11dp"        android:listSelector="@android:color/transparent"        android:scrollbars="none"        android:isScrollContainer="false"        android:background="@color/listview_bg_withgroup"/>    <View        style="@style/view_line_style"        android:layout_marginTop="@dimen/base_8" />    <RelativeLayout        android:id="@+id/show_all_group_members"        android:background="@color/listview_bg_withgroup"        style="@style/style_common_setting_item_layout">        <TextView            style="@style/style_common_setting_item_label"            android:text="@string/show_all_group_members" />        <ImageView            style="@style/style_common_setting_arrow"            android:contentDescription="@null"/>        <View            android:layout_width="match_parent"            android:layout_height="@dimen/common_dividing_line_height"            android:layout_alignParentBottom="true"            android:background="@color/common_dividing_line_bg_color" />    </RelativeLayout>    <View        android:layout_marginTop="-1dp"        android:layout_width="match_parent"        android:layout_height="1dp"        android:background="@drawable/shape_line"/>    <LinearLayout        android:id="@+id/group_attribute"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:orientation="vertical">        <View            style="@style/view_line_style"            android:layout_marginTop="@dimen/base_8" />        <RelativeLayout            android:id="@+id/group_name_layout"            style="@style/style_common_setting_item_layout"            android:background="@color/listview_bg_withgroup">            <TextView                android:id="@+id/group_name_lable"                style="@style/style_common_setting_item_label"                android:text="@string/group_name" />            <TextView                android:id="@+id/group_name_content"                style="@style/style_common_setting_item_value"                android:layout_alignParentRight="true"                android:layout_toRightOf="@id/group_name_lable"                android:layout_marginRight="@dimen/base_16"                android:layout_toLeftOf="@+id/right_arrow1"                android:text="@string/no_name" />            <ImageView                android:id="@+id/right_arrow1"                style="@style/style_common_setting_arrow"                android:visibility="gone"                android:contentDescription="@null"/>        </RelativeLayout>        <View style="@style/view_line_style" />        <RelativeLayout            android:id="@+id/group_avatar_layout"            style="@style/style_common_setting_item_layout"            android:layout_height="56dp"            android:background="@color/listview_bg_withgroup">            <TextView                style="@style/style_common_setting_item_label"                android:text="@string/group_avatar" />            <com.xdja.comm.circleimageview.CircleImageView                android:id="@+id/group_avatar"                android:layout_width="@dimen/list_item_avatar_size"                android:layout_height="@dimen/list_item_avatar_size"                android:layout_alignParentRight="true"                android:layout_marginRight="@dimen/base_16"                android:layout_centerVertical="true"                android:src="@drawable/group_avatar_40" />            <ImageView                android:id="@+id/right_arrow3"                style="@style/style_common_setting_arrow"                android:visibility="gone"                android:contentDescription="@null"/>        </RelativeLayout>        <View style="@style/view_line_style" />        <RelativeLayout            android:id="@+id/group_nickname_layout"            style="@style/style_common_setting_item_layout"            android:background="@color/listview_bg_withgroup">            <TextView                android:id="@+id/group_nickname_lable"                style="@style/style_common_setting_item_label"                android:text="@string/my_nickname_in_group" />            <TextView                android:id="@+id/group_nickname_content"                style="@style/style_common_setting_item_value"                android:layout_alignParentRight="true"                android:layout_toLeftOf="@+id/right_arrow2"                android:layout_toRightOf="@id/group_nickname_lable"                android:layout_marginRight="@dimen/base_16"                android:text="@string/no_name" />            <ImageView                android:id="@+id/right_arrow2"                style="@style/style_common_setting_arrow"                android:contentDescription="@null"/>        </RelativeLayout>    </LinearLayout></LinearLayout>