<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    tools:ignore="Overdraw"    android:id="@+id/contact_detail_bottom_layout"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:gravity="center_horizontal"    android:orientation="vertical"    android:paddingBottom="30dp"    android:paddingTop="@dimen/base_20">    <!--overdraw-->    <!--android:background="@color/base_gray_f4"-->    <RelativeLayout        android:id="@+id/send_encription_mesage"        android:layout_width="match_parent"        android:layout_marginLeft="@dimen/contact_friend_include_item_margin"        android:layout_marginRight="@dimen/contact_friend_include_item_margin"        android:layout_height="@dimen/contact_friend_includ_item_heght"        android:background="@drawable/bg_common_btn_seletor"        android:gravity="center">        <TextView            android:id="@+id/send_message_text"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_centerHorizontal="true"            android:layout_centerVertical="true"            android:drawableLeft="@drawable/img_btn_message"            android:drawablePadding="@dimen/base_16"            android:gravity="center"            android:text="@string/contact_friend_inculd_message"            android:textColor="@color/base_black_95"            android:textSize="@dimen/menu_14" />        <!--            <ImageView                        android:id="@+id/send_message_img"                        android:layout_height="wrap_content"                        android:layout_width="wrap_content"                        android:layout_toLeftOf="@id/send_message_text"                        android:layout_marginRight="@dimen/base_16"                        android:layout_centerVertical="true"                        android:src="@drawable/img_btn_message"/>-->    </RelativeLayout>    <RelativeLayout        android:id="@+id/call_encription_phone"        android:layout_width="match_parent"        android:layout_marginLeft="@dimen/contact_friend_include_item_margin"        android:layout_marginRight="@dimen/contact_friend_include_item_margin"        android:layout_height="@dimen/contact_friend_includ_item_heght"        android:layout_marginTop="@dimen/base_10"        android:background="@drawable/bg_common_btn_seletor"        android:gravity="center">        <TextView            android:id="@+id/call_encription_phone_text"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:drawableLeft="@drawable/img_btn_friend_call"            android:drawablePadding="@dimen/base_16"            android:gravity="center"            android:text="@string/contact_friend_inculd_call"            android:textColor="@color/base_black_95"            android:textSize="@dimen/menu_14" />    </RelativeLayout>    <RelativeLayout        android:id="@+id/open_encription_serve"        android:layout_width="@dimen/contact_friend_includ_item_width"        android:layout_height="@dimen/contact_friend_includ_item_heght"        android:layout_marginTop="@dimen/base_10"        android:background="@drawable/bg_common_btn_seletor"        android:gravity="center"        android:visibility="gone">        <TextView            android:id="@+id/open_encription_serve_text"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:drawableLeft="@drawable/img_btn_encryption_server"            android:drawablePadding="@dimen/base_16"            android:gravity="center"            android:text="@string/contact_friend_inculd_encription_serve"            android:textColor="@color/base_black_95"            android:textSize="@dimen/menu_14" />    </RelativeLayout></LinearLayout>